Footer layout issue #1915 (#1916)

--- a/src/components/Footer/FooterNavList/FooterNavList.scss
+++ b/src/components/Footer/FooterNavList/FooterNavList.scss
@@ -1,6 +1,6 @@
 .FooterNavList {
   list-style-type: none;
-  margin-right: 60px;
+  margin-right: 50px;
   padding-inline-start: 0;
 
   &:last-child {
